// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Assets Middleware BUNDLE match snapshot 1`] = `
"
  <script src=\\"/static-content/productsummary/js/2.1.2.3.4.chunk.js\\" ></script>
  <script src=\\"/static-content/productsummary/js/main.1.2.3.4.chunk.js\\" ></script>
  <script src=\\"/static-content/productsummary/js/runtime~main.1.2.3.4.js\\" ></script>
"
`;

exports[` Assets Middleware BUNDLE_VENDOR match snapshot 1`] = `
"
        <script nomodule src=\\"/static-content/vendors/core-js/2.6.11/core.min.js\\"></script>
        <script src=\\"/static-content/vendors/react/16.13.1/umd/react.production.min.js\\"></script>
        <script src=\\"/static-content/vendors/react/16.13.1/umd/react-dom.production.min.js\\"></script>
        
  <script src=\\"/static-content/productsummary/js/2.1.2.3.4.chunk.js\\" ></script>
  <script src=\\"/static-content/productsummary/js/main.1.2.3.4.chunk.js\\" ></script>
  <script src=\\"/static-content/productsummary/js/runtime~main.1.2.3.4.js\\" ></script>

    "
`;

exports[` Assets Middleware PRELOAD match snapshot 1`] = `
"
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/2.1.2.3.4.chunk.js\\" />
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/main.1.2.3.4.chunk.js\\" />
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/runtime~main.1.2.3.4.js\\" />
  <style>.prod-summary-star-rating--hidden div{display: none;}</style>
  <script name=\\"themeColours\\">
    window.themeColours = window.themeColours || {};
    window.themeColours[\\"v1.4.4\\"] = {}
  </script>
"
`;

exports[` Assets Middleware PRELOAD_VENDOR match snapshot 1`] = `
"
        <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/vendors/react/16.13.1/umd/react.production.min.js\\" />
        <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/vendors/react/16.13.1/umd/react-dom.production.min.js\\" />
        
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/2.1.2.3.4.chunk.js\\" />
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/main.1.2.3.4.chunk.js\\" />
  <link rel=\\"preload\\" as=\\"script\\" href=\\"/static-content/productsummary/js/runtime~main.1.2.3.4.js\\" />
  <style>.prod-summary-star-rating--hidden div{display: none;}</style>
  <script name=\\"themeColours\\">
    window.themeColours = window.themeColours || {};
    window.themeColours[\\"v1.4.4\\"] = {}
  </script>

    "
`;
